# 3dmaze

./: .gitignore  CMakeLists.txt  full_make.sh  make.sh  partial_make.sh
assets/scenes/: basic.xml
assets/shaders/: basic.frag  basic.vert  basic_light.frag  basic_light.vert  basic_tex.frag  basic_tex.vert
src/: CMakeLists.txt  main.cpp  test.cpp
src/component/: camera_component.h  camera_movement_queue_component.h  light_angle_component.h  light_component.h  light_direction_component.h  mesh_component.h  position_component.h  render_component.h  shader_component.h  texture_component.h  transform_component.h
src/engine/: application_settings.h  engine.cpp  engine.h
src/entity/: component_pool.h  entity.cpp  entity.h  entity_allocator.cpp  entity_allocator.h  entity_manager.cpp  entity_manager.h
src/event/: event.h  event_dispatcher.h  system_events.h
src/loaders/: image_loader.cpp  image_loader.h  mesh_loader.cpp  mesh_loader.h  shader_loader.cpp  shader_loader.h
src/manager/: resource_manager.h  window_manager.cpp  window_manager.h
src/misc/: scene_validate.xsd
src/render/: shader_loader.cpp  shader_loader.h
src/resource/: image.h
src/scene/: scene.cpp  scene.h  scene_loader.cpp  scene_loader.h
src/system/: input_system.cpp  input_system.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h  system.h
src/test/: component_test.cpp  component_test.h  entity_test.cpp  entity_test.h  test_test.cpp  test_test.h
src/test_harness/: test.cpp  test.h  test_harness.cpp  test_harness.h  test_macros.h  test_suite.cpp  test_suite.h
src/util/: consts.h  logger.cpp  logger.h  opengl_headers.h
tools/: smooth.py
